--- a/index.html
+++ b/index.html
@@ -225,12 +225,10 @@
                     <aside class="side-right-cost">
                         <div class="info-cost">
                             <p>$41.88</p>
-                            <p>+ $92.43 + No Import Fees Deposit & $25.90 Shipping to Israel
+                            <p>+ No Import Fees Deposit & $25.90 Shipping to Israel
                                 <a href="#">Details </a> </p>
                             <p>Arrives: <span class="more">Feb 26 - March 4</span></p>
-
                         </div>
-
             </div>
             </aside>
             </section>
